[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["Jarrod Folino <jarrod.folino@fundingcircle.com>"]
readme = "README.md"
packages = [{include = "rock_paper_scissors"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
